--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@next/env": "^15.4.0-canary.51",
+    "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "eslint-config-next": "15.2.2",
     "eslint-plugin-storybook": "^0.11.6",
     "playwright": "^1.51.1",
+    "prisma": "^6.8.2",
     "storybook": "^8.6.7",
     "tailwindcss": "^4",
     "typescript": "^5",
